kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  product-service-project
  namespace: dn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service-project
  template:
    metadata:
      labels:
        app: product-service-project
    spec:
      # Use the Kubernetes Service Account (KSA)with Workload Identity
      serviceAccountName: ksa  # Ensure this matches your KSA name
      containers:
        # Spring Boot application container
        - name: product-service-project
          image: asia-south1-docker.pkg.dev/multi-micro-project/mutli-micro-repo/product-service-project:tag_version
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
