kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-project-service
  namespace: dn
spec:
  type: NodePort
  selector:
    app: product-service-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      nodePort: 30081
