kubernetes/ingress-resource.yaml
#https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: product-project-service
                port:
                  number: 80
          - path: /()
            pathType: Prefix
            backend:
              service:
               name: product-project-service
               port:
                 number: 80
